Fix truncating account header field when it is not a link

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -2239,9 +2239,9 @@ body.embed .detailed-status__meta .detailed-status__link .icon-retweet,
 }
 
 /* Truncate too long links in the profile, like Nostr */
-.layout-multiple-columns .account__header__bio .account__header__fields a span {
+.layout-multiple-columns .account__header__bio .account__header__fields a {
   display: block;
-  max-width: 200px;
+  max-width: 220px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
